[gd_scene load_steps=2 format=3 uid="uid://bhmwps23ijnc0"]

[ext_resource type="Script" path="res://characters/template/hud/hudTemplate.gd" id="1_io344"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_io344")

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_right = 256.0
offset_bottom = 16.0
show_percentage = false

[node name="StamBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 256.0
offset_right = 512.0
offset_bottom = 16.0
rotation = 2.0944
pivot_offset = Vector2(0, 16)
show_percentage = false

[node name="ParryBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = -256.0
offset_bottom = 16.0
rotation = -2.0944
pivot_offset = Vector2(256, 16)
show_percentage = false

[node name="ParryTimer" type="Timer" parent="."]

[connection signal="timeout" from="ParryTimer" to="." method="_on_parry_timer_timeout"]
